--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <script>
     window.$docsify = {
       name: '',
-      repo: ''
+      repo: 'SheepBukkitTutorial/sheepbukkittutorial.github.io',
+      loadSidebar: true,
+      subMaxLevel: 2
     }
   </script>
   <!-- Docsify v4 -->
